--- a/fitness/src/main/resources/templates/signup.html
+++ b/fitness/src/main/resources/templates/signup.html
@@ -8,14 +8,15 @@
 <body>
     <h1>Sign Up</h1>
     <form action="#" th:action="@{/signup}" th:object="${user}" method="post">
+        <div th:if="${message}">
+            <p th:text="${message}" style="color: red;"></p>
+        </div>
+
         <label for="username">Username:</label>
         <input type="text" id="username" th:field="*{username}" required />
 
         <label for="password">Password:</label>
         <input type="password" id="password" th:field="*{password}" required />
-
-        <label for="confirmPassword">Confirm Password:</label>
-        <input type="password" id="confirmPassword" required />
 
         <label for="email">Email:</label>
         <input type="email" id="email" th:field="*{email}" required />
@@ -23,9 +24,7 @@
         <button type="submit">Sign Up</button>
     </form>
 
-    <div th:if="${message}">
-        <p th:text="${message}"></p>
-    </div>
+    <p><a th:href="@{/login}">Already have an account? Log in</a></p>
 </body>
 
 </html>
