--- a/fitness/src/main/resources/templates/reviewList.html
+++ b/fitness/src/main/resources/templates/reviewList.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
 
-            <a th:href="@{/exercises/{id}/review(id=${exercise.id})}" class="btn btn-primary">Add a Review</a>
+            <a th:href="@{/exercises/{id}/add-review(id=${exercise.id})}" class="btn btn-primary">Add a Review</a>
         </div>
     </div>
 
