--- a/fitness/src/main/resources/templates/signup.html
+++ b/fitness/src/main/resources/templates/signup.html
@@ -3,28 +3,39 @@
 
 <head>
     <title>Sign Up</title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 </head>
 
 <body>
-    <h1>Sign Up</h1>
-    <form action="#" th:action="@{/signup}" th:object="${user}" method="post">
-        <div th:if="${message}">
-            <p th:text="${message}" style="color: red;"></p>
-        </div>
+    <div class="container mt-5">
+        <h1 class="mb-4">Sign Up</h1>
+        <form action="#" th:action="@{/signup}" th:object="${user}" method="post">
+            <div th:if="${message}">
+                <p th:text="${message}" style="color: red;"></p>
+            </div>
 
-        <label for="username">Username:</label>
-        <input type="text" id="username" th:field="*{username}" required />
+            <div class="form-group mb-3">
+                <label for="username">Username:</label>
+                <input type="text" id="username" th:field="*{username}" class="form-control" required />
+            </div>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" th:field="*{password}" required />
+            <div class="form-group mb-3">
+                <label for="password">Password:</label>
+                <input type="password" id="password" th:field="*{password}" class="form-control" required />
+            </div>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" th:field="*{email}" required />
+            <div class="form-group mb-3">
+                <label for="email">Email:</label>
+                <input type="email" id="email" th:field="*{email}" class="form-control" required />
+                <div class="invalid-feedback">Please enter a valid email address.</div>
+            </div>
 
-        <button type="submit">Sign Up</button>
-    </form>
+            <button type="submit" class="btn btn-primary">Sign Up</button>
+        </form>
 
-    <p><a th:href="@{/login}">Already have an account? Log in</a></p>
+        <p class="mt-3"><a th:href="@{/login}">Already have an account? Log in</a></p>
+    </div>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
 </body>
 
 </html>
