Added search option and bootstrap style

--- a/fitness/src/main/resources/templates/index.html
+++ b/fitness/src/main/resources/templates/index.html
@@ -9,11 +9,13 @@
 <body>
     <h1>Welcome to Fitness Exercises</h1>
 
-    <!-- Button to add a new exercise -->
+    <!-- add a new exercise -->
     <a href="/add" class="btn btn-primary">Add New Exercise</a>
 
-    <!-- Button to view the list of exercises -->
+    <!--  view the list -->
     <a href="/exercises" class="btn btn-secondary">View All Exercises</a>
 </body>
 
 </html>
+
+<!-- tämä sivu ei ole käytössä -->
