--- a/fitness/src/main/resources/templates/addReview.html
+++ b/fitness/src/main/resources/templates/addReview.html
@@ -26,7 +26,7 @@
             <div class="form-group mb-3">
                 <label for="comment">Comment:</label>
                 <textarea id="comment" th:field="*{comment}" class="form-control" rows="3" required></textarea>
-                <div class="invalid-feedback">Please enter a comment.</div>
+                <div class="invalid-feedback">Please enter a comment</div>
             </div>
 
             <button type="submit" class="btn btn-primary">Submit Review</button>
